// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activeClass 1`] = `
Object {
  "Options": Object {},
  "html": "<a href=\\"/base\\" class=\\"test-active\\"> Base page </a>",
}
`;

exports[`class & useActiveClass & activeClass 1`] = `
Object {
  "Options": Object {},
  "html": "<a class=\\"foo test-active\\" href=\\"/base\\"> Base page </a>",
}
`;

exports[`click 1`] = `
Object {
  "Options": Object {},
  "html": "<a href=\\"/base\\"> Base page </a>",
}
`;

exports[`params 1`] = `
Object {
  "Options": Object {},
  "html": "<a href=\\"/base/1\\"> Base page </a>",
}
`;

exports[`params builder 1`] = `
Object {
  "Options": Object {
    "path": [Function],
  },
  "html": "<a class=\\"foo test-active\\" href=\\"/base/1\\"> Base page </a>",
}
`;

exports[`params from options 1`] = `
Object {
  "Options": Object {
    "params": Object {
      "id": 1,
    },
  },
  "html": "<a href=\\"/base/1\\"> Base page </a>",
}
`;

exports[`remove 1`] = `
Object {
  "Options": Object {},
  "html": "",
}
`;

exports[`render correctly 1`] = `
Object {
  "Options": Object {},
  "html": "<a href=\\"/base\\"> Base page </a>",
}
`;

exports[`useActiveClass 1`] = `
Object {
  "Options": Object {},
  "html": "<a href=\\"/base\\" class=\\"active\\"> Base page </a>",
}
`;

exports[`useActiveClass 2`] = `
Object {
  "Options": Object {},
  "html": "<a href=\\"/base\\" class=\\"\\"> Base page </a>",
}
`;
